--- a/serverless.yml
+++ b/serverless.yml
@@ -1,24 +1,38 @@
-service: cloudwatch-logs
+service: maint-cw-logs
 
 provider:
   name: aws
   runtime: python3.7
   region: ap-northeast-1
-
+  stage: dev
+  logRetentionInDays: 30
+  deploymentBucket:
+    name: serverless-deployment-173212653244
   iamRoleStatements:
     - Effect: "Allow"
       Action:
         - "logs:DescribeLogGroups"
+        - "logs:DeleteLogGroup"
         - "logs:PutRetentionPolicy"
+        - "logs:ListTagsLogGroup"
       Resource:
-          - "arn:aws:logs:*:*:log-group:*"
-          - "arn:aws:logs:*:*:log-group:*:log-stream:*"
-
+        - "arn:aws:logs:*:*:log-group:*"
+        - "arn:aws:logs:*:*:log-group:*:log-stream:*"
+plugins:
+  - serverless-prune-plugin
 functions:
-  change_retention:
-    handler: handler.main
+  change-retention:
+    handler: handler.lambda_handler
     timeout: 300
     environment:
       RETENTION: 7
+      NO_RETENTION_TAG: "NoChangeRetention"
     events:
-      - schedule: cron(0 15 * * ? *)
+      - schedule:
+          rate: cron(0 15 * * ? *)
+          name: maint-cw-logs-change-retention
+          enabled: false
+custom:
+  prune:
+    automatic: true
+    number: 5
